--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,33 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>IKVM Maven Plugin</name>
-  <url>http://maven.apache.org</url>
+  <description>A collection of Java utilities.</description>
+  <url>http://github.com/samskivert/ikvm-maven-plugin</url>
+  <issueManagement>
+    <url>http://github.com/samskivert/ikvm-maven-plugin/issues</url>
+  </issueManagement>
+
+  <licenses>
+    <license>
+      <name>The (New) BSD License</name>
+      <url>http://www.opensource.org/licenses/bsd-license.php</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <id>samskivert</id>
+      <name>Michael Bayne</name>
+      <email>mdb@samskivert.com</email>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git://github.com/samskivert/ikvm-maven-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:samskivert/ikvm-maven-plugin.git</developerConnection>
+    <url>http://github.com/samskivert/ikvm-maven-plugin/</url>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
