--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.samskivert</groupId>
   <artifactId>ikvm-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
 
   <name>IKVM Maven Plugin</name>
   <description>A collection of Java utilities.</description>
